dev & test (add api & testing) : add & testing organizer & category new api
