# docs/swagger.json
@@ -26,18 +26,12 @@
               "schema": {
                 "type": "object",
                 "required": [
-                  "name",
-                  "organizerId"
+                  "name"
                 ],
                 "properties": {
                   "name": {
                     "type": "string",
                     "example": "Technology"
-                  },
-                  "organizerId": {
-                    "type": "string",
-                    "description": "Organizer ObjectId",
-                    "example": "66c9e1f3b3a1c8f6c4d1a912"
                   }
                 }
               }
@@ -136,12 +130,14 @@
             }
           }
         }
-      },
+      }
+    },
+    "/categories/:id": {
       "get": {
-        "summary": "Get Category",
-        "description": "Get category by Id",
+        "summary": "Get Organizer",
+        "description": "Get organizer by Id",
         "tags": [
-          "Categories"
+          "Organizer"
         ],
         "requestBody": {
           "required": true,
@@ -151,14 +147,20 @@
                 "type": "object",
                 "required": [
                   "id"
-                ]
+                ],
+                "properties": {
+                  "id": {
+                    "type": "string",
+                    "example": "66c9e1f3b3a1c8f6c4d1a999"
+                  }
+                }
               }
             }
           }
         },
         "responses": {
           "201": {
-            "description": "Category has been find successfully",
+            "description": "Organizer has been find successfully",
             "content": {
               "application/json": {
                 "schema": {
@@ -170,7 +172,7 @@
                     },
                     "message": {
                       "type": "string",
-                      "example": "[SUCCESS] Category has been find"
+                      "example": "[SUCCESS] Organizer has been find"
                     },
                     "data": {
                       "type": "object",
@@ -224,7 +226,7 @@
             }
           },
           "400": {
-            "description": "Failed to find id category",
+            "description": "Failed to find id organizer",
             "content": {
               "application/json": {
                 "schema": {
@@ -236,11 +238,129 @@
                     },
                     "message": {
                       "type": "string",
-                      "example": "[FAILED] Failed to find id category"
+                      "example": "[FAILED] Failed to find id organizer"
                     },
                     "errors": {
                       "type": "string",
                       "example": "Not Found"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "summary": "Update exist category",
+        "description": "Update category and link it to an organizer",
+        "tags": [
+          "Categories"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "name"
+                ],
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "example": "Technology"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Category update successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "[SUCCESS] Category has been updated"
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "id": {
+                          "type": "string",
+                          "example": "66c9e1f3b3a1c8f6c4d1a999"
+                        },
+                        "name": {
+                          "type": "string",
+                          "example": "Technology"
+                        },
+                        "organizerId": {
+                          "type": "string",
+                          "example": "66c9e1f3b3a1c8f6c4d1a912"
+                        },
+                        "organizer": {
+                          "type": "object",
+                          "properties": {
+                            "id": {
+                              "type": "string",
+                              "example": "66c9e1f3b3a1c8f6c4d1a912"
+                            },
+                            "name": {
+                              "type": "string",
+                              "example": "Google Developer Group"
+                            },
+                            "createdAt": {
+                              "type": "string",
+                              "format": "date-time"
+                            },
+                            "updatedAt": {
+                              "type": "string",
+                              "format": "date-time"
+                            }
+                          }
+                        },
+                        "createdAt": {
+                          "type": "string",
+                          "format": "date-time"
+                        },
+                        "updatedAt": {
+                          "type": "string",
+                          "format": "date-time"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Failed to update category",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean",
+                      "example": false
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "[FAILED] Failed to update category"
+                    },
+                    "errors": {
+                      "type": "string",
+                      "example": "Category not found\""
                     }
                   }
                 }
